2011-07-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggroup.R: fix to use.scrollwindow. Put in large default
	minimum size for the widget, but this can be overridden via width,
	height arguments.

2011-07-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R: added delete method for main window. (Thanks Ben)

2011-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gbigtable.R (gbigtable): error with sapply not being used (why not?)

2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R: added size<- for columnWidths, rowHeights. Send in
	as list components

2010-11-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (updateCallback): use taskCallback in place of
	timer to update.

2010-11-11  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: fix to ".add" to show child so that delete/add
	will work together

2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R: added feature for from= being a vector of values
	(not necessarily regularly spaced)
	

2010-10-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R: fix bug in check for integer values

	* R/gmenu.R: fix to adding popupmenu. Stil an issue with menus
	under OS X.

	* R/aabClasses.R: changed EventWidget from Container subclass to
	Widget subclass

2010-10-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: added tag(obj, "default_fill") check to avoid
	having widget fill with "both" when fill argument not
	specified. (gedit, gbutton)

	* R/dnd.R: fixed dnd from gvarbrowser

2010-10-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphicsnotebook.R: implemented

2010-10-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ghtml.R: added ghtml to pass off to gtext.

	* R/gimage.R: fixed typo in file.sep
