@@ -62,6 +62,46 @@ setMethod(".ggroup",
               gw$minimumWidth <- width
               gw$minimumHeight <- height
 
+
+              ## QT Docs: Note that You must add the layout of widget
+              ## before you call this function; if you add it later,
+              ## the widget will not be visible - regardless of when
+              ## you show() the scroll area. In this case, you can
+              ## also not show() the widget later.
+
+              ## widgetResizable : bool This property holds whether
+              ## the scroll area should resize the view widget. If
+              ## this property is set to false (the default), the
+              ## scroll area honors the size of its widget. Regardless
+              ## of this property, you can programmatically resize the
+              ## widget using widget()->resize(), and the scroll area
+              ## will automatically adjust itself to the new size. If
+              ## this property is set to true, the scroll area will
+              ## automatically resize the widget in order to avoid
+              ## scroll bars where they can be avoided, or to take
+              ## advantage of extra space.
+
+              ## When using a scroll area to display the contents of a
+              ## custom widget, it is important to ensure that the
+              ## size hint of the child widget is set to a suitable
+              ## value. If a standard QWidget is used for the child
+              ## widget, it may be necessary to call
+              ## QWidget::setMinimumSize() to ensure that the contents
+              ## of the widget are shown correctly within the scroll
+              ## area.
+              ## 
+              ## If a scroll area is used to display the
+              ## contents of a widget that contains child widgets
+              ## arranged in a layout, it is important to realize that
+              ## the size policy of the layout will also determine the
+              ## size of the widget. This is especially useful to know
+              ## if you intend to dynamically change the contents of
+              ## the layout. In such cases, setting the layout's size
+              ## constraint property to one which provides constraints
+              ## on the minimum and/or maximum size of the layout
+              ## (e.g., QLayout::SetMinAndMaxSize) will cause the size
+              ## of the scroll area to be updated whenever the
+              ## contents of the layout changes.
               sb <- Qt$QScrollArea()
               sb$setWidget(gw)
 
